--- a/src/style.css
+++ b/src/style.css
@@ -22,26 +22,32 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+/* body {
   margin: 0;
   position: relative;
   display: grid;
   flex-direction: column;
   place-items: center;
   min-height: 100vh;
-}
+} */
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-
+/* .main {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
 #app {
   position: absolute;
   margin: 0 auto;
   top: 0;
+  width: 100vw;
+  min-height: 100vh;
   text-align: center;
-}
+} */
 
 .logo.vanilla:hover {
   filter: drop-shadow(0 0 2em #f7df1eaa);
