--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,20 @@
+*, *::after, *::before {
+  margin: 0 !important;
+  padding: 0 !important;
+  box-sizing: border-box;
+}
+canvas {
+  padding: 0 !important;
+  margin: 0 !important;
+  overflow: hidden;
+}
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -22,43 +34,16 @@ a:hover {
   color: #535bf2;
 }
 
-/* body {
-  margin: 0;
+body {
+  margin: 0 !important;
+  padding: 0 !important;
   position: relative;
-  display: grid;
-  flex-direction: column;
-  place-items: center;
   min-height: 100vh;
-} */
+} 
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
-/* .main {
-  width: 100%;
-  height: 100%;
-  display: flex;
-}
-#app {
-  position: absolute;
-  margin: 0 auto;
-  top: 0;
-  width: 100vw;
-  min-height: 100vh;
-  text-align: center;
-} */
-
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
 
 button {
